--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
     <section class="hero">
         <div class="container">
             <h1>Pixelmator Pro 3.7</h1>
-            <p>Pixelmator Pro is an image editor designed to make the most powerful professional image editing tools accessible to everyone. And with an extensive collection of tools for editing and retouching photos, creating graphic designs, painting, drawing vector graphics, and adding stunning effects, it’s the only image editor you’ll need.</p>
+            <p>Pixelmator Pro is an image editor designed to make the most powerful 
+                professional image editing tools accessible to everyone. And with an 
+                extensive collection of tools for editing and retouching photos, creating 
+                graphic designs, painting, drawing vector graphics, and adding stunning effects, 
+                it’s the only image editor you’ll need.</p>
             <a href="#" class="btn-buy-now">Buy now</a>
         </div>
         <img src="imatges/hero-image.jpg" alt="Hero Image" class="hero-image rounded shadow">
@@ -54,7 +58,10 @@
     <section class="vector-section colored-bg">
         <div class="container">
             <h2>Draw and illustrate with a full collection of vector tools.</h2>
-            <p>Pixelmator Pro comes with a full set of vector tools for creating resolution-independent designs. It includes easily-customizable smart shapes, and support for vector file formats including PSD, SVG, PDF, Adobe Illustrator, and Illustrator EPS.</p>
+            <p>Pixelmator Pro comes with a full set of vector tools for creating 
+                resolution-independent designs. It includes easily-customizable smart 
+                shapes, and support for vector file formats including PSD, SVG, PDF, 
+                Adobe Illustrator, and Illustrator EPS.</p>
             <img src="imatges/vector-image.jpg" alt="Vector Tools" class="vector-image rounded shadow">
         </div>
     </section>
@@ -65,11 +72,17 @@
             <div class="specs-content">
                 <div class="spec-item">
                     <h3>Resolution Independent</h3>
-                    <p>Vector shapes are resolution-independent, so curves always look smooth and edges always stay sharp, no matter how much you resize each shape or even entire vector designs.</p>
+                    <p>Vector shapes are resolution-independent, 
+                        so curves always look smooth and edges 
+                        always stay sharp, no matter how much you 
+                        resize each shape or even entire vector designs.</p>
                 </div>
                 <div class="spec-item">
                     <h3>Vector Support</h3>
-                    <p>Pixelmator Pro supports vector file formats, including PSD, SVG, PDF, Adobe Illustrator, and Illustrator EPS, so you can effortlessly edit shapes and paths in these files, and export them while keeping all their vector data.</p>
+                    <p>Pixelmator Pro supports vector file formats, including 
+                        PSD, SVG, PDF, Adobe Illustrator, and Illustrator EPS, 
+                        so you can effortlessly edit shapes and paths in these 
+                        files, and export them while keeping all their vector data.</p>
                 </div>
             </div>
         </div>
