--- a/Pixelmator Pro.html
+++ b/Pixelmator Pro.html
@@ -1,40 +1,12 @@
 <!DOCTYPE html>
-<html lang="es" class=" hover retina">
+<html lang="es">
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Pixelmator Pro</title>
-  <meta name="description" content="Professional image editing tools that anyone can use.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <meta name="author" content="Pixelmator Team">
-  <link rel="dns-prefetch" href="http://ajax.googleapis.com/">
-  <link rel="preconnect" href="http://ajax.googleapis.com/">
-  <link rel="dns-prefetch" href="http://www.google-analytics.com/">
-  <link rel="preconnect" href="http://www.google-analytics.com/">
-  <link rel="dns-prefetch" href="http://player.vimeo.com/">
-  <link rel="preconnect" href="http://player.vimeo.com/">
-  <link rel="dns-prefetch" href="http://s3.amazonaws.com/">
-  <link rel="preconnect" href="http://s3.amazonaws.com/">
   <link rel="icon" type="image/png" href="https://www.pixelmator.com/pro/assets/favicon/favicon-pro--v2.png">
-  <link rel="apple-touch-icon-precomposed" sizes="144x144"
-    href="https://www.pixelmator.com/pro/assets/favicon/favicon-144x144.png">
-
   <link rel="stylesheet" href="global.css">
-  <meta property="fb:app_id" content="187687094761342">
-  <meta property="og:site_name" content="Pixelmator Pro">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="//www.pixelmator.com/pro/">
-  <meta property="og:title" content="Pixelmator Pro">
-  <meta property="og:description"
-    content="Pixelmator Pro is a powerful, beautiful, and easy to use image editor packed full of innovations.">
-  <meta property="og:image" content=" Pixelmator Pro_files/img-facebook.jpg">
-  <meta name="twitter:title" content="Pixelmator Pro">
-  <meta name="twitter:description"
-    content="Pixelmator Pro is a powerful, beautiful, and easy to use image editor packed full of innovations.">
-  <meta name="twitter:url" content="//www.pixelmator.com/pro/">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@pixelmator">
-  <meta name="twitter:image:src" content=" Pixelmator Pro_files/img-twitter.jpg">
   <style>
     .hero {
       padding-top: 88px;
@@ -109,7 +81,6 @@
   <style>
     .newHome {
       position: sticky;
-      position: -webkit-sticky;
       top: 51px;
       z-index: 10;
       background-color: #0f0f0f;
@@ -139,7 +110,7 @@
       font-size: 14px;
       font-weight: 600;
       color: #ffffff;
-      transition: none !important;
+      transition: none;
     }
 
     .newHome__link svg {
@@ -168,9 +139,7 @@
           and retouching photos, creating graphic designs, painting, drawing vector graphics, and adding stunning
           effects, it’s the only image editor you’ll need.</p>
         <nav class="buy-try-buttons">
-          <a href="https://www.pixelmator.com/pro/buy/index.html" class="buy-try-buttons__item"> Buy now <svg
-              xmlns="//www.w3.org/2000/svg" class="buy-try-buttons__item-icon is-appstore" width="19" height="16"
-              viewBox="0 0 42 36">
+          <a href="https://www.pixelmator.com/pro/buy/index.html" class="buy-try-buttons__item"> Buy now
               <defs>
                 <style>
                   .cls-1 {
@@ -178,9 +147,6 @@
                   }
                 </style>
               </defs>
-              <path id="Mac_app_store" data-name="Mac app store" class="cls-1"
-                d="M38.581,28.014H35.051l2.4,4.149a2.51,2.51,0,1,1-4.348,2.51l-8.9-15.423c-0.163-.318-0.312-0.6-0.441-0.82a6.847,6.847,0,0,1,1.028-8.2l7.371,12.766h6.429A2.51,2.51,0,1,1,38.581,28.014Zm-22.915-5.02h7.4a3.651,3.651,0,0,1,3.385,5.02H3.44a2.51,2.51,0,1,1,0-5.02H9.869L18.112,8.716,15.528,4.24a2.51,2.51,0,0,1,4.348-2.51L21.011,3.7,22.146,1.73a2.51,2.51,0,1,1,4.348,2.51Zm-9.28,6.033a6.883,6.883,0,0,1,1.162-.1,6.812,6.812,0,0,1,3.963,1.265L8.923,34.673a2.51,2.51,0,1,1-4.348-2.51Z">
-              </path>
             </svg>
           </a>
         </nav>
@@ -290,12 +256,7 @@
               popular digital cameras. What’s more, you can add RAW photos as RAW layers and edit directly without
               having to convert or preprocess them.</p>
             <a href="https://support.pixelmator.com/faq-pixelmator-pro/resources/digital-camera-raw-formats-supported-in-pixelmator-pro"
-              class="tools__item-link type-m" target="_blank" style="margin-top: 15px;"> View supported RAW formats <svg
-                height="10" viewBox="0 0 10 20" width="5" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="m406.883 378.274c.014.038.033.075.045.114a2.078 2.078 0 0 1 .05.247c.007.044.02.087.024.131a2.1 2.1 0 0 1 0 .251v.131a1.967 1.967 0 0 1 -.044.239c-.01.046-.015.094-.029.14a1.794 1.794 0 0 1 -.077.195c-.023.057-.042.115-.07.169s-.064.1-.1.148a1.759 1.759 0 0 1 -.127.187c0 .007-.009.015-.014.021l-6.024 8.036a2 2 0 1 1 -3.064-2.571l5.055-6.744-5.056-6.693a2 2 0 1 1 3.064-2.571l6.024 7.973s.006.011.01.016a1.94 1.94 0 0 1 .165.241c.018.031.041.06.058.091a1.933 1.933 0 0 1 .11.249z"
-                  fill="#327cf6" fill-rule="evenodd" transform="translate(-397 -369)"></path>
-              </svg>
+              class="tools__item-link type-m" target="_blank" style="margin-top: 15px;"> View supported RAW formats 
             </a>
           </li>
           <li class="tools__item">
@@ -309,12 +270,7 @@
         </ul>
         <p class="tools__more">
           <a href="https://www.pixelmator.com/pro/#" class="tools__more-link type-l js-open-modal"
-            data-modal="adjustments">
-            <svg height="23" viewBox="0 0 46 46" width="23" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="m318 208a23 23 0 1 1 23-23 23 23 0 0 1 -23 23zm0-43a20 20 0 1 0 20 20 20 20 0 0 0 -20-20zm2 31h-4v-9h-9v-4h9v-9h4v9h9v4h-9z"
-                fill-rule="evenodd" transform="translate(-295 -162)"></path>
-            </svg> See the full list of adjustments </a>
+            data-modal="adjustments">See the full list of adjustments </a>
         </p>
       </div>
     </section>
