--- a/Pixelmator Pro.html
+++ b/Pixelmator Pro.html
@@ -770,12 +770,8 @@
           </li>
         </ul>
         <p class="advanced__full"> <a href="https://www.pixelmator.com/pro/tech-specs/"
-            class="advanced__full-link type-m"> See full tech specs <svg height="10" viewBox="0 0 10 20" width="5"
-              xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="m406.883 378.274c.014.038.033.075.045.114a2.078 2.078 0 0 1 .05.247c.007.044.02.087.024.131a2.1 2.1 0 0 1 0 .251v.131a1.967 1.967 0 0 1 -.044.239c-.01.046-.015.094-.029.14a1.794 1.794 0 0 1 -.077.195c-.023.057-.042.115-.07.169s-.064.1-.1.148a1.759 1.759 0 0 1 -.127.187c0 .007-.009.015-.014.021l-6.024 8.036a2 2 0 1 1 -3.064-2.571l5.055-6.744-5.056-6.693a2 2 0 1 1 3.064-2.571l6.024 7.973s.006.011.01.016a1.94 1.94 0 0 1 .165.241c.018.031.041.06.058.091a1.933 1.933 0 0 1 .11.249z"
-                fill="#327cf6" fill-rule="evenodd" transform="translate(-397 -369)"></path>
-            </svg> </a> </p>
+            class="advanced__full-link type-m"> See full tech specs  </a> 
+        </p>
       </div>
     </section>
     <section class="pro__mac-app mac-app">
@@ -1100,12 +1096,7 @@
             <p class="modal-window__adjustments-description type-xs">Add a touch of natural film grain to emulate the
               look of analog film in your digital photos.</p>
           </li>
-        </ul> <span class="modal-window__close"> <svg height="28" viewBox="0 0 56 56" width="28"
-            xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="m377 212a28 28 0 1 1 28-28 28 28 0 0 1 -28 28zm0-53a25 25 0 1 0 25 25 25 25 0 0 0 -25-25zm10.607 32.778-2.829 2.829-7.778-7.779-7.778 7.779-2.829-2.829 7.779-7.778-7.779-7.778 2.829-2.829 7.778 7.779 7.778-7.779 2.829 2.829-7.779 7.778z"
-              fill-rule="evenodd" transform="translate(-349 -156)"></path>
-          </svg> </span>
+        </ul> <span class="modal-window__close">  </span>
       </div>
     </aside>
 
